<resources>
    <string name="app_name">مواعيدك</string>
    <string name="createAccount">إنشاء حساب</string>
    <string name="name">الاسم بالكامل</string>
    <string name="email">البريد الالكتروني</string>
    <string name="pass">كلمه السر</string>
    <string name="signup">إنشاء حساب</string>
    <string name="login">تسجيل دخول</string>
    <string name="ifAc">إذا كان لديك حساب؟</string>
    <string name="ifDAc">إذا لم يكن لديك حساب؟</string>
    <string name="no_connection">لا يوجد اتصال بالانترنت.</string>
    <string name="ok">تم</string>
    <string name="select_manager">اختر مديرك</string>
    <string name="manager">مدير</string>
    <string name="secretary">مساعد</string>
    <string name="search">بحث</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin">أدمن</string>
    <string name="edit">تعديل</string>
    <string name="delete">حذف</string>
    <string name="signOut">تسجيل خروج</string>
    <string name="open_nav">فتح</string>
    <string name="close_nav">غلق</string>
    <string name="youSignout">هل تريد تسجيل الخروج</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="addManager">أضف مدير</string>
    <string name="add">أضافه</string>
    <string name="managers">المديرين</string>
    <string name="noData">لا يوجد بيانات</string>
    <string name="addDate">أضف معاد</string>
    <string name="Date">التاريخ</string>
    <string name="time">الوقت</string>
    <string name="topic">الموضوع</string>
    <string name="address">العنوان</string>
    <string name="status">الحاله</string>
    <string name="personOrSide">الجهه او الشخص</string>
    <string name="notManager">لم يتم تحديد اي مدير</string>
    <string name="editDate">تعديل المعاد</string>
    <string name="Date2">التاريخ : </string>
    <string name="time2">الوقت :</string>
    <string name="personal">الجهه او الشخص :</string>
    <string name="topic2">الموضوع :</string>
    <string name="inOrOut">المكان :</string>
    <string name="address2">العنوان :</string>
    <string name="status2">الحاله :</string>
    <string name="note">ملحوظه</string>
    <string name="type">النوع</string>
    <string name="note2">الملاحظات :</string>
</resources>