<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dark"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".Welcome">

    <ImageView
        android:src="@drawable/time"
        android:layout_width="wrap_content"
        android:layout_height="400dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdmin"
        android:text="@string/admin"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/mainColor"
        android:fontFamily="@font/bold"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/mainColor"
        android:fontFamily="@font/bold"
        android:text="@string/manager"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSecretary"
        android:text="@string/secretary"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/mainColor"
        android:fontFamily="@font/bold"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>