<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ad"
    android:orientation="vertical"
    android:background="@color/Dark"
    tools:context=".secretary.AddDate">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:padding="20dp"
        android:background="@color/Dark"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/signOut"
                android:src="@drawable/logout"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/addDate"
                android:src="@drawable/add"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="10dp"
        app:hintEnabled="false"
        app:endIconTint="@color/mainColor"
        app:startIconDrawable="@drawable/person"
        app:startIconTint="@color/mainColor"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded">

        <AutoCompleteTextView
            android:id="@+id/manager"
            android:inputType="none"
            android:fontFamily="@font/regular"
            android:background="@drawable/textinputstyle"
            android:hint="@string/manager"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/search"
        android:paddingHorizontal="20dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="15dp"
        android:drawableEnd="@drawable/search"
        android:theme="@style/CustomEditText"
        android:fontFamily="@font/regular"
        android:hint="@string/search"
        android:textColorHint="@color/gray"
        android:background="@drawable/bg_search"
        android:textColor="@color/white"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <RelativeLayout
        android:padding="10dp"
        android:background="@color/Light"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/datesRv"
            android:visibility="gone"
            android:background="@color/Light"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/noConnection"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/no_connection"
                android:layout_width="wrap_content"
                android:layout_height="250dp" />

            <TextView
                android:text="@string/no_connection"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:fontFamily="@font/medium"
                android:textSize="17sp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/isEmpty"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/empty"
                android:layout_width="wrap_content"
                android:layout_height="250dp" />

            <TextView
                android:text="@string/noData"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:fontFamily="@font/medium"
                android:textSize="17sp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/notManager"
            android:visibility="visible"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/empty"
                android:layout_width="wrap_content"
                android:layout_height="250dp" />

            <TextView
                android:text="@string/notManager"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:fontFamily="@font/medium"
                android:textSize="17sp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/prog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="35dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>